refac and fix: change variable for production